# PyPII

./: .gitignore  LICENSE  README.md  patterns.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
src/: __init__.py  cli.py
src/detector/: patterns.py  pii_detector.py
src/pypii/: cli.py
src/pypii/detector/: __init__.py  patterns.py
src/pypii/report/: __init__.py
src/pypii/scanner/: file_scanner.py
src/report/: generator.py
src/scan/: pattern.py
src/scan/parsers/: base.py
src/scan/parsers/s3/lambda_handlers/: base.py  text.py
src/scanner/: __init__.py  file_scanner.py  pattern_definitions.py
src/utils/: file_handler.py  logger.py
tests/: test_cli.py  test_file_handler.py  test_file_scanner.py  test_logger.py  test_pattern_definitions.py  test_patterns.py  test_pii_detector.py  test_report_generator.py  test_s3_lambda_base.py
